donut-chart custom elements now rendering with API data

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -16,8 +16,8 @@ html(lang="en")
       div.charts
         div.charts__frame
           chart-axes.chart.chart--axes
-          donut-chart.chart.chart--sun(start="" end="")
-          donut-chart.chart.chart--moon(start="" end="")
+          donut-chart.chart.chart--sun(start="" end="" color="#f8c537")
+          donut-chart.chart.chart--moon(start="" end="" color="#fff")
           moon-photo.photo(hemisphere="")
       moon-info.info(percent="" phase="")
       prev-next.nav.nav--prev(direction="prev" date="" location="")
