Attribute enum added to Constants (which was renamed from Chart); location attributes, localStorage, fallback moved into JS

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,4 +1,3 @@
-- var location = 'New York, NY'
 doctype html
 html(lang="en")
   head
@@ -21,8 +20,8 @@ html(lang="en")
           donut-chart.chart(name="moon" color="#fff")
           moon-photo.photo
       moon-info.info
-      prev-next.nav(direction="prev" location=location)
-      prev-next.nav(direction="next" location=location)
+      prev-next.nav(direction="prev")
+      prev-next.nav(direction="next")
       //- TODO: populate footer content with JS to avoid FOUC
       //- footer.footer
         //- p.copyright
