UserLocation wired up, but not fully working just yet

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -12,7 +12,7 @@ html(lang="en-GB")
       header.header
         h1.header__title
           a.header__link(href="/" title="Today")
-          div.location(location=location)
+        user-location.location(location=location)
       div.charts
         div.charts__frame
           chart-axes.chart
