loader renamed to progress-bar

--- a/src/stylus/moon.styl
+++ b/src/stylus/moon.styl
@@ -11,7 +11,6 @@
 @import './moon/footer'
 @import './moon/header'
 @import './moon/info'
-@import './moon/loader'
 @import './moon/location'
 @import './moon/photo'
-@import './moon/preloader'
+@import './moon/progress_bar'
