--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -8,7 +8,7 @@ html(lang="en-GB")
     meta(name="apple-mobile-web-app-capable" content="yes")
   body
     div.app
-      div.loader
+      div.progress-bar
       header.header
         h1.header__title
           a.header__link(href="/" title="Today")
