spinner styles moved to photo

--- a/src/stylus/moon/photo.styl
+++ b/src/stylus/moon/photo.styl
@@ -37,3 +37,8 @@
 for n in (2..26)
   .photo__image[frame=\"{n}\"]
     top '-%s00%' % (n - 1)
+
+.spinner
+  left 50%
+  position absolute !important
+  top 50%
