controls renamed to nav

--- a/src/stylus/moon.styl
+++ b/src/stylus/moon.styl
@@ -7,10 +7,10 @@
 @import './moon/animations'
 @import './moon/app'
 @import './moon/charts'
-@import './moon/controls'
 @import './moon/footer'
 @import './moon/header'
 @import './moon/info'
 @import './moon/location'
+@import './moon/nav'
 @import './moon/photo'
 @import './moon/progress_bar'
