render footer content via JS to avoid a FOUC

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -22,13 +22,12 @@ html(lang="en-GB")
       moon-info.info
       prev-next.nav(direction="prev")
       prev-next.nav(direction="next")
-      //- TODO: populate footer content with JS to avoid FOUC
-      //- footer.footer
-        //- p.copyright
-        //-   span.copyright__years
-        //-   a.copyright__owner(
-        //-     href="https://gauslin.com",
-        //-     title="Ben Gauslin’s Website",
-        //-     target="_blank",
-        //-     rel="noopener",
-        //-   )
+      footer.footer
+        p.copyright
+          span.copyright__years
+          a.copyright__owner(
+            href="https://gauslin.com",
+            title="Ben Gauslin’s Website",
+            target="_blank",
+            rel="noopener",
+          )
