App.js cleanup; don't rewrite home url; app-capable title added to template

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,11 +1,12 @@
 doctype html
 html(lang="en-GB")
   head
-    title Moon Phase
+    title Moonrise, Moonset, Moon Phase
     meta(charset="utf-8")
     meta(name="description" content="Location-based moon phase, moonrise, moonset, sunrise, and sunset.")    
     meta(name="viewport" content="width=device-width,initial-scale=1")
     meta(name="apple-mobile-web-app-capable" content="yes")
+    meta(name="apple-mobile-web-app-title" content="Moon")
   body
     div.app
       div.progress-bar
