--- a/src/stylus/moon/footer.styl
+++ b/src/stylus/moon/footer.styl
@@ -1,12 +1,13 @@
 .footer
-  align-self center
+  align-items center
+  // align-self center
   border-top .5px solid rgba(white, .5)
   color rgba(white, .5)
+  display flex
   grid-area footer
-  padding px_to_rem(12) px_to_rem(16)
-
-  @media Breakpoint.SMALL
-    padding px_to_rem(16)
+  height var(--footer-height)
+  justify-content center
+  padding 0 px_to_rem(16)
 
 .copyright
   font-size var(--fineprint)
