charts layout update

--- a/src/stylus/moon/charts.styl
+++ b/src/stylus/moon/charts.styl
@@ -2,9 +2,7 @@
   align-self center
   animation scaleIn var(--transition-intro) ease
   grid-area charts
-  margin 0 auto
-  max-width 90vw
-  width 100%
+  padding px_to_rem(8)
 
 .charts__frame
   margin 0 auto
