--- a/src/stylus/moon/footer.styl
+++ b/src/stylus/moon/footer.styl
@@ -12,18 +12,21 @@
   text-align center
 
 .footer > p
-  margin 0
   padding 0
-
-.copyright__years
-  margin-right px_to_em(4)
-
-.footer .powered-by
-  font-size px_to_em(14)
-  margin-top px_to_rem(4)
 
 .footer a
   link(rgba(white, .7), rgba(white, .7), white, white)
 
 [no-touch] .footer a
   transition var(--transition)
+
+.copyright
+  margin 0
+
+.copyright__years
+  margin-right px_to_em(4)
+
+// WWO credit link.
+.wwo
+  font-size px_to_em(14)
+  margin px_to_rem(4) 0 0
