--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -8,7 +8,7 @@ html(lang="en-GB")
     meta(name="apple-mobile-web-app-capable" content="yes")
     meta(name="apple-mobile-web-app-title" content="Moon")
   body
-    div.app(api="usno")
+    div.app
       div.progress-bar
       header.header
         h1.header__title
