webfont via 'assets' subdomain

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -7,6 +7,7 @@ html(lang="en-GB")
     meta(name="viewport" content="width=device-width,initial-scale=1")
     meta(name="apple-mobile-web-app-capable" content="yes")
     meta(name="apple-mobile-web-app-title" content="Moon")
+    link(href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" rel="preload" as="font" type="font/woff2" crossorigin="crossorigin")
   body
     div.app
       div.progress-bar
