--- a/src/stylus/config/mixins.styl
+++ b/src/stylus/config/mixins.styl
@@ -1,10 +1,9 @@
 // @mixin
 all_webfonts()
   @font-face
-    font-display block
     font-family 'Avenir Variable'
     font-weight 1 999
-    src url('../webfonts/AvenirNext-Variable.woff2') format('woff2')
+    src url('https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2') format('woff2')
 
 // @mixin
 // @param Color link
