stylus imports via index files in each folder (no-op)

--- a/src/stylus/moon.styl
+++ b/src/stylus/moon.styl
@@ -1,16 +1,2 @@
-@import './config/constants'
-@import './config/functions'
-@import './config/mixins'
-
-@import './moon/_root_vars'
-@import './moon/_html'
-@import './moon/animations'
-@import './moon/app'
-@import './moon/charts'
-@import './moon/footer'
-@import './moon/header'
-@import './moon/info'
-@import './moon/location'
-@import './moon/nav'
-@import './moon/photo'
-@import './moon/progress_bar'
+@import './config/index'
+@import './moon/index'
