root renamed to custom_properties (no-op)

--- a/src/stylus/moon/index.styl
+++ b/src/stylus/moon/index.styl
@@ -1,7 +1,7 @@
 // Import base files first...
-@import 'root'
-@import 'html'
+@import 'custom_properties'
 @import 'animations'
+@import 'html'
 // Followed by all others in alphabetical order.
 @import 'charts'
 @import 'footer'
