--- a/src/stylus/moon/header.styl
+++ b/src/stylus/moon/header.styl
@@ -1,7 +1,7 @@
 .header
   align-self center
   animation slideInDown var(--transition-intro) ease
-  grid-area header
+  grid-row 1
   padding px_to_rem(8) px_to_rem(16)
 
 .header__title
