--- a/src/stylus/moon/index.styl
+++ b/src/stylus/moon/index.styl
@@ -4,6 +4,7 @@
 @import 'html'
 // Followed by all others in alphabetical order.
 @import 'charts'
+@import 'content'
 @import 'footer'
 @import 'header'
 @import 'info'
