--- a/src/stylus/moon/footer.styl
+++ b/src/stylus/moon/footer.styl
@@ -1,10 +1,10 @@
 .footer
   align-items center
+  align-self center
   color rgba(white, .5)
   display flex
-  flex-direction column
   font-size var(--fineprint)
-  grid-area footer
+  grid-row 3
   height var(--footer-height)
   justify-content center
   padding 0 px_to_rem(16)
