renderHeaderLink via JS instead of pug template

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -13,8 +13,7 @@ html(lang="en-GB")
     link(rel="preload" href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" as="font" type="font/woff2" crossorigin="crossorigin")
   body
     header.header
-      h1.header__title
-        a.header__link(href="/" title="Today")= title
+      h1.header__title= title
     main.content
     footer.footer
       p.copyright
