--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,5 +1,6 @@
 - const title = "Moonrise, Moonset, Moon Phase"
 - const description = "Geolocation-based moon phase, moonrise, and moonset"
+- const shortTitle = "Moon"
 
 doctype html
 html(lang="en-GB")
@@ -8,13 +9,17 @@ html(lang="en-GB")
     meta(charset="utf-8")
     meta(name="description" content=description)    
     meta(name="viewport" content="width=device-width,initial-scale=1")
+    meta(name="theme-color" content="#000")
     meta(name="apple-mobile-web-app-capable" content="yes")
-    meta(name="apple-mobile-web-app-title" content="Moon")
+    meta(name="apple-mobile-web-app-title" content=shortTitle)
     link(rel="preload" href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" as="font" type="font/woff2" crossorigin="crossorigin")
+    link(rel="apple-touch-icon" href="/apple-touch-icon.png")
+    //- link(rel="manifest" href="/pwa/manifest.json")
   body
     header.header
-      h1.header__title= title
+      h1.header__title= shortTitle
     main.content
+      noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
     footer.footer
       p.copyright
         span.copyright__years © 2018
