--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -14,7 +14,7 @@ html(lang="en-GB")
     meta(name="apple-mobile-web-app-title" content=shortTitle)
     link(rel="preload" href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" as="font" type="font/woff2" crossorigin="crossorigin")
     link(rel="apple-touch-icon" href="/apple-touch-icon.png")
-    //- link(rel="manifest" href="/pwa/manifest.json")
+    link(rel="manifest" href="/pwa/manifest.json")
   body
     header.header
       h1.header__title= shortTitle
