no-js markup and styles updates

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -18,7 +18,7 @@ html(lang="en-GB")
   body
     header.header
       h1.header__title= shortTitle
-    main.content
+    main.content.content--no-js
       noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
     footer.footer
       p.copyright
