iphone notch layout style updates

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -8,7 +8,7 @@ html(lang="en-GB")
     title= title
     meta(charset="utf-8")
     meta(name="description" content=description)    
-    meta(name="viewport" content="width=device-width,initial-scale=1")
+    meta(name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover")
     meta(name="theme-color" content="#000")
     meta(name="apple-mobile-web-app-capable" content="yes")
     meta(name="apple-mobile-web-app-title" content=shortTitle)
