--- a/src/stylus/moon/footer.styl
+++ b/src/stylus/moon/footer.styl
@@ -1,17 +1,9 @@
 .footer
-  align-items center
   align-self center
   color rgba(white, .5)
-  display flex
   font-size var(--fineprint)
   grid-row 3
-  height var(--footer-height)
-  justify-content center
-  padding 0 px_to_rem(16)
-  text-align center
-
-.footer > p
-  padding 0
+  padding 0 0 env(safe-area-inset-bottom)
 
 .footer a
   link(rgba(white, .5), rgba(white, .5), white, white)
@@ -20,7 +12,13 @@
   transition var(--transition)
 
 .copyright
+  align-items center
+  display flex
+  height var(--footer-height)
+  justify-content center
   margin 0
+  padding 0 px_to_rem(16)
+  text-align center
 
 .copyright__years
   margin-right px_to_em(8)
