no-touch attribute added to template; related js method renamed and simplified

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -15,7 +15,7 @@ html(lang="en-GB")
     link(rel="preload" href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" as="font" type="font/woff2" crossorigin="crossorigin")
     link(rel="apple-touch-icon" href="/apple-touch-icon.png")
     link(rel="manifest" href="/pwa/manifest.json")
-  body
+  body(no-touch)
     header.header
       h1.header__title= shortTitle
     main.content.content--no-js
