Updates path in comment and removes stray semicolon in constants.styl (no-op)

--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -1,12 +1,12 @@
 @import 'functions'
 
-// Values are coordinated with 'Chart' enum in 'source/js/modules/Constants.js'
+// Values are coordinated with 'Chart' enum in 'src/js/modules/Constants.js'
 // @type Hash
 Chart = {
   SIZE: 320
   SWEEP_WIDTH: 72
   MARGIN: 44
-};
+}
 
 // @type String
 AXIS_LABEL_SIZE = px_to_rem(32)
