--- a/src/stylus/moon/html.styl
+++ b/src/stylus/moon/html.styl
@@ -14,7 +14,7 @@ body
   display grid
   grid-template-rows auto 1fr auto
   min-height 100vh // fallback
-  min-height calc(var(--viewport-unit, 1vh) * 100)
+  min-height calc(var(--vh, 1vh) * 100)
 
   @media Breakpoint.SMALL
     grid-template-rows 1fr auto 1fr
