underscores replaced with hyphens in stylus filenames (no-op)

--- a/src/stylus/moon/index.styl
+++ b/src/stylus/moon/index.styl
@@ -1,5 +1,5 @@
 // Import base files first...
-@import 'custom_properties'
+@import 'custom-properties'
 @import 'animations'
 @import 'html'
 // Followed by all others in alphabetical order.
@@ -11,4 +11,4 @@
 @import 'location'
 @import 'nav'
 @import 'photo'
-@import 'progress_bar'
+@import 'progress-bar'
