px_to_r/em() stylus functions renamed (no-op)

--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -9,28 +9,28 @@ Chart = {
 }
 
 // @type String
-AXIS_LABEL_SIZE = px_to_rem(32)
+AXIS_LABEL_SIZE = rem(32)
 
 // @type String
-BUTTON_SIZE = px_to_rem(32)
+BUTTON_SIZE = rem(32)
 
 // @type String
-CHART_MAX_WIDTH = px_to_rem(480)
+CHART_MAX_WIDTH = rem(480)
 
 // @type Number
 CHART_SIZE_UNITS = Chart.SIZE + (Chart.MARGIN * 2)
 
 // @type String
-CHART_SIZE = px_to_rem(CHART_SIZE_UNITS)
+CHART_SIZE = rem(CHART_SIZE_UNITS)
 
 // @type String
-CONTROLS_SIZE = px_to_rem(48)
+CONTROLS_SIZE = rem(48)
 
 // @type String
-LOCATION_HEIGHT = px_to_rem(32)
+LOCATION_HEIGHT = rem(32)
 
 // @type String
-LOCATION_MAX_WIDTH = px_to_rem(Chart.SIZE)
+LOCATION_MAX_WIDTH = rem(Chart.SIZE)
 
 // @type Number
 PHOTO_SIZE = Chart.SIZE - (Chart.SWEEP_WIDTH * 2)
