--- a/src/stylus/moon/custom-properties.styl
+++ b/src/stylus/moon/custom-properties.styl
@@ -1,14 +1,14 @@
 :root
-  --footer-height px_to_rem(44)
+  --footer-height rem(44)
 
-  --site-header px_to_rem(16)
-  --info-label px_to_em(14)
-  --chart-label px_to_em(13)
-  --fineprint px_to_em(12)
+  --site-header rem(16)
+  --info-label em(14)
+  --chart-label em(13)
+  --fineprint em(12)
 
   --transition .3s
   --transition-intro 1s
 
   @media Breakpoint.SMALL
-    --fineprint px_to_em(14)
-    --footer-height px_to_rem(60)
+    --fineprint em(14)
+    --footer-height rem(60)
