--- a/src/stylus/moon/footer.styl
+++ b/src/stylus/moon/footer.styl
@@ -17,8 +17,8 @@
   height var(--footer-height)
   justify-content center
   margin 0
-  padding 0 px_to_rem(16)
+  padding 0 rem(16)
   text-align center
 
 .copyright__years
-  margin-right px_to_em(8)
+  margin-right em(8)
