--- a/src/stylus/moon/info.styl
+++ b/src/stylus/moon/info.styl
@@ -3,7 +3,7 @@
   animation slideInUp var(--transition-intro) ease
   font-size var(--info-label)
   grid-area info
-  padding px_to_rem(16) 0
+  padding rem(16) 0
   text-align center
   white-space nowrap
 
@@ -12,7 +12,7 @@
 
 .info__percent
   color rgba(white, .7)
-  margin-top px_to_rem(8)
+  margin-top rem(8)
 
 .info__percent[invisible]
   visibility hidden
