--- a/src/stylus/moon/location.styl
+++ b/src/stylus/moon/location.styl
@@ -27,7 +27,7 @@ user-location
   color white
   display inline-flex
   font-size 1em
-  padding 0 px_to_rem(32)
+  padding 0 rem(32)
   text-align center
   text-overflow ellipsis
   transition background var(--transition)
