--- a/src/stylus/moon/nav.styl
+++ b/src/stylus/moon/nav.styl
@@ -21,7 +21,7 @@
 // SVG icons.
 .nav__icon
   height auto
-  flex 0 0 px_to_rem(32)
+  flex 0 0 rem(32)
   transition transform var(--transition)
 
 .nav__link:active .nav__icon
