--- a/src/stylus/moon/charts.styl
+++ b/src/stylus/moon/charts.styl
@@ -2,7 +2,7 @@
   align-self center
   animation scaleIn var(--transition-intro) ease
   grid-area charts
-  padding px_to_rem(8)
+  padding rem(8)
 
 .charts__frame
   margin 0 auto
