--- a/src/stylus/moon/header.styl
+++ b/src/stylus/moon/header.styl
@@ -2,7 +2,7 @@
   align-self center
   animation slideInDown var(--transition-intro) ease
   grid-row 1
-  padding px_to_rem(8) px_to_rem(16)
+  padding rem(8) rem(16)
 
 .header__title
   font-size var(--site-header)
@@ -12,7 +12,7 @@
 .header__link
   link(white, white, rgba(white, .7), rgba(white, .7))
   display inline-block
-  padding px_to_rem(8)
+  padding rem(8)
   transition transform var(--transition)
   white-space nowrap
 
