--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -17,13 +17,13 @@ html(lang="en-GB")
     link(rel="preload" href="https://assets.gauslin.com/fonts/AvenirNext-Variable.woff2" as="font" type="font/woff2" crossorigin="crossorigin")
     link(rel="apple-touch-icon" href="/apple-touch-icon.png")
     link(rel="manifest" href="/pwa/manifest.json")
-  body(no-touch)
+  body(no-touch no-js)
     div.progress-bar
     header.header
       h1.header__title
         a.header__link(href="/" title="Today")= shortTitle
       user-location.location
-    main.content.no-js
+    main.content
       noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
       div.charts
         div.charts__frame
