TodayHighlighter custom element created from App method

--- a/src/stylus/moon/html.styl
+++ b/src/stylus/moon/html.styl
@@ -59,6 +59,9 @@ svg
   display none !important
   pointer-events none !important
 
-// Font styles if current date is also today.
+// Styles for elements if current date is also today.
+app-today
+  display none
+
 .today
   webfont_weight(600)
