--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -34,6 +34,7 @@ html(lang="en-GB")
       moon-info.info
       prev-next.nav(direction="prev")
       prev-next.nav(direction="next")
+      app-today(selector=".header__title,.info__phase,.info__percent")
     footer.footer
       p.copyright
         span.copyright__years © 2018
