--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -22,7 +22,7 @@ html(lang="en-GB")
     header.header
       h1.header__title
         a.header__link(href="/" title="Today")= shortTitle
-      user-location.location
+      user-location.location(default="New York, NY")
     main.content
       noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
       div.charts
