--- a/src/stylus/moon/index.styl
+++ b/src/stylus/moon/index.styl
@@ -3,6 +3,7 @@
 @import 'animations'
 @import 'html'
 // Followed by all others in alphabetical order.
+@import 'app'
 @import 'charts'
 @import 'content'
 @import 'footer'
@@ -13,3 +14,4 @@
 @import 'no-js'
 @import 'photo'
 @import 'progress-bar'
+@import 'today'
