[hidden] css uncommented (oops)

--- a/src/stylus/moon/html.styl
+++ b/src/stylus/moon/html.styl
@@ -47,6 +47,6 @@ svg
   vertical-align middle
   width 100%
 
-// [hidden]
-//   display none !important
-//   pointer-events none !important
+[hidden]
+  display none !important
+  pointer-events none !important
