GitHub link added to footer; CSS custom properties and constants refactored

--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -38,6 +38,12 @@ PHOTO_SIZE = Chart.SIZE - (Chart.SWEEP_WIDTH * 2)
 // @type String
 PHOTO_WIDTH = (PHOTO_SIZE / CHART_SIZE_UNITS) * 100%
 
+// @type String
+TRANSITION = .3s
+
+// @type String
+TRANSITION_INTRO = 1s
+
 // @type Hash
 Breakpoint = {
   SMALL: 'screen and (min-width: %s)' % (CHART_SIZE + (AXIS_LABEL_SIZE + CONTROLS_SIZE * 2))
