--- a/src/stylus/moon/charts.styl
+++ b/src/stylus/moon/charts.styl
@@ -1,6 +1,6 @@
 .charts
   align-self center
-  animation scaleIn var(--transition-intro) ease
+  animation scaleIn TRANSITION_INTRO ease
   grid-area charts
   padding rem(8)
 
@@ -38,4 +38,4 @@ chart-axes
 
 // SVG chart 'rise' and 'set' time labels. Sizes scale with SVG, so value varies.
 .chart__label
-  font-size var(--chart-label)
+  font-size em(13)
