--- a/src/stylus/moon/info.styl
+++ b/src/stylus/moon/info.styl
@@ -1,7 +1,7 @@
 .info
   align-self center
-  animation slideInUp var(--transition-intro) ease
-  font-size var(--info-label)
+  animation slideInUp TRANSITION_INTRO ease
+  font-size em(14)
   grid-area info
   padding rem(16) 0
   text-align center
