--- a/src/stylus/moon/photo.styl
+++ b/src/stylus/moon/photo.styl
@@ -24,7 +24,7 @@
 .photo__image
   opacity 0
   position absolute
-  transition opacity var(--transition) ease
+  transition opacity TRANSITION ease
 
 .photo__image[ready]
   opacity 1
