--- a/src/stylus/moon/footer.styl
+++ b/src/stylus/moon/footer.styl
@@ -1,24 +1,26 @@
 .footer
+  align-items center
   align-self center
   color rgba(white, .5)
+  display flex
   font-size var(--fineprint)
   grid-row 3
-  padding 0 0 env(safe-area-inset-bottom)
-
-.footer a
-  link(rgba(white, .5), rgba(white, .5), white, white)
-
-[no-touch] .footer a
-  transition var(--transition)
-
-.copyright
-  align-items center
-  display flex
   height var(--footer-height)
   justify-content center
-  margin 0
-  padding 0 rem(16)
-  text-align center
+  padding 0 0 env(safe-area-inset-bottom)
 
-.copyright__years
+.footer__years
   margin-right em(8)
+
+.footer__link
+  link(rgba(white, .5), rgba(white, .5), white, white)
+
+.footer__link:focus
+[no-touch] .footer__link:hover
+  transition color TRANSITION
+
+.footer__blurb--repo::before
+  content '·'
+  display inline-block
+  text-align center
+  width 1rem
