--- a/src/stylus/moon/header.styl
+++ b/src/stylus/moon/header.styl
@@ -1,11 +1,11 @@
 .header
   align-self center
-  animation slideInDown var(--transition-intro) ease
+  animation slideInDown TRANSITION_INTRO ease
   grid-row 1
   padding rem(8) rem(16)
 
 .header__title
-  font-size var(--site-header)
+  font-size 1rem
   margin 0
   text-align center
 
@@ -13,11 +13,11 @@
   link(white, white, rgba(white, .7), rgba(white, .7))
   display inline-block
   padding rem(8)
-  transition transform var(--transition)
+  transition transform TRANSITION
   white-space nowrap
 
 .header__link:active
   transform scale(.8)
 
 [no-touch] .header__link
-  transition color var(--transition), transform var(--transition)
+  transition color TRANSITION, transform TRANSITION
