BEM update for prev/next elements (no-op)

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -34,8 +34,8 @@ html(lang="en-GB")
             donut-chart.chart(name="moon" color=moonColor)
             moon-photo.photo
         moon-info.info
-        prev-next.nav(direction="prev")
-        prev-next.nav(direction="next")
+        prev-next.nav.nav--prev(direction="prev")
+        prev-next.nav.nav--next(direction="next")
         app-today(selector=".header__title,.info__phase,.info__percent")
       footer.footer
         p.footer__blurb.footer__blurb--copyright
