--- a/src/stylus/moon/nav.styl
+++ b/src/stylus/moon/nav.styl
@@ -2,11 +2,11 @@
   align-self center
   justify-self center
 
-.nav[direction=prev]
+.nav--prev
   animation slideInLeft TRANSITION_INTRO ease
   grid-area prev
 
-.nav[direction=next]
+.nav--next
   animation slideInRight TRANSITION_INTRO ease
   grid-area next
   text-align right
@@ -20,8 +20,8 @@
 
 // SVG icons.
 .nav__icon
-  height auto
   flex 0 0 rem(32)
+  height auto
   transition transform TRANSITION
 
 .nav__link:active .nav__icon
